# bagitify

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  bagitify.py  docker-compose.yml  environment.yml  pyproject.toml  test_bagitify.py
bagitify/: bagit_wrapper.py  bagitify.py  cli.py  download.py  metadata.py  utils.py
test/: test_bagitify.py
test-data/: metadata.json
test-data/netcdfs/: edu_usf_marine_comps_2022-05.nc  edu_usf_marine_comps_2022-07.nc
test/test-data/netcdf/: edu_usf_marine_comps_2022-06.nc  edu_usf_marine_comps_2022-08.nc
