[project]
name = "bagitify"
dynamic = ["version"]
dependencies = [
  "bagit",
  "requests",
  "click"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "flake8",
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
exclude = ["bagit_archives"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.scripts]
bagitify = "bagitify.cli:cli"
